# Web-Scanner

./: .gitignore  README.md
dashboard/: README.md  index.html  package-lock.json
dashboard/src/: App.css  App.jsx
notes/: rust-distributed-scanner.md  rust-scanner-versions.docx
web-scanner/: Cargo.toml  README.md
web-scanner/src/: main.rs  model.rs  scanner.rs
